2006-07-13  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Justin.

        http://bugzilla.opendarwin.org/show_bug.cgi?id=9663
        REGRESSION (r14948-r14956): Selection in text field remains highlighted when the text field loses focus

        * editing/selection/clear-selection-expected.checksum: Added.
        * editing/selection/clear-selection-expected.png: Added.
        * editing/selection/clear-selection-expected.txt: Added.
        * editing/selection/clear-selection.html: Added.

2006-07-12  David Kilzer  <ddkilzer@kilzer.net>

        Reviewed by NOBODY (layout test fix).

        Remove property information left in files from svn-apply.

        * fast/table/large-rowspan-crash-expected.txt:
        * fast/table/large-rowspan-crash.html:

2006-07-12  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - another large rowspan test case

        * fast/table/large-rowspan-crash-expected.txt: Added.
        * fast/table/large-rowspan-crash.html: Added.

2006-07-12  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Maciej.

        <rdar://problem/4586665> REGRESSION: autorestore.apple.com: Crashes Safari in WebCore::Widget::client() const

        * fast/forms/input-type-change-in-onfocus-keyboard-expected.txt: Added.
        * fast/forms/input-type-change-in-onfocus-keyboard.html: Added.
        * fast/forms/input-type-change-in-onfocus-mouse-expected.txt: Added.
        * fast/forms/input-type-change-in-onfocus-mouse.html: Added.

2006-07-12  Adele Peterson  <adele@apple.com>

        Reviewed by Maciej.

        Test for: http://bugzilla.opendarwin.org/show_bug.cgi?id=9813
        OPTION text can paint over select element's scrollbar

        * fast/forms/option-text-clip-expected.checksum: Added.
        * fast/forms/option-text-clip-expected.png: Added.
        * fast/forms/option-text-clip-expected.txt: Added.
        * fast/forms/option-text-clip.html: Added.
