@@ -1,0 +1,14 @@
+<div id="test" contenteditable="true"></div>
+
+<script>
+var s = window.getSelection();
+s.setPosition(document.getElementById("test"), 0);
+
+document.execCommand("InsertText", false, "sugare");
+document.execCommand("InsertText", false, " ");
+document.execCommand("InsertText", false, "sugari");
+document.execCommand("InsertText", false, " ");
+document.execCommand("InsertText", false, "sugarm");
+document.execCommand("InsertText", false, " ");
+document.execCommand("Undo");
+</script>
